hack: fix overflow

--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -209,6 +209,7 @@ body {
 .settings {
   max-width: 40em;
   margin: 1em auto;
+  overflow-x: hidden;
 
   form {
     max-width: initial;
